package server;

message record_offline_user
{
    required uint64 ptr = 1; // 场景角色对象
}
